# devopsgpt

./: .gitignore  README.md  api.py  pyproject.toml
config/: finetune_shakespeare.py  finetune_sre.py  finetune_sre_small.py  train_sre_cpu.py
data/openwebtext/: prepare.py
data/sre.google_char/: prepare.py  readme.md
nbs/: gradio_explore.ipynb  sre_scrape.ipynb
src/: bench.py  devops_gpt.py  model.py  sample.py  train.py
