[tool.poetry]
name = "trixidia-gpt"
version = "0.1.0"
description = ""
authors = ["Simon Butt <simonbutt123@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.24.2"
transformers = "^4.26.1"
datasets = "^2.9.0"
tiktoken = "^0.2.0"
wandb = "^0.13.10"
tqdm = "^4.64.1"
beautifulsoup4 = "^4.11.2"
gradio = "^3.19.1"
torch = "*"
fastapi = "^0.92.0"
uvicorn = "^0.20.0"

[[tool.poetry.source]]
name = "pytorch-nightly"
url = "https://download.pytorch.org/whl/nightly/cu117"
secondary = true

[tool.poetry.group.dev.dependencies]
jupyterlab = "^3.6.1"
black = "^23.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
